# gai_play

./: .gitignore  README.md  build_exe.py  config.yaml  entry_cli.py  entry_web.py  mindmap.html  pyproject.toml  start.bat
skills/: galgame.md  tricolour_lovestory.md
src/gai_mcp/: __init__.py  __main__.py  capturer.py  cli.py  config_manager.py  core.py  game_loop.py  input_controller.py  local_analyzer.py  memory.py  models.py  models_advanced.py  reflection.py  server.py  skill_manager.py  task_manager.py  virtual_desktop.py
src/gai_mcp/ai_engine/: __init__.py  base.py  claude.py  local.py  openai.py
src/gai_mcp/web/: app.py  game_runner.py  run.py
src/gai_mcp/web/static/: index.html
src/gai_play/: __main__.py  config_manager.py  skill_manager.py  task_manager.py
src/gai_play/ai_engine/: base.py  claude.py  openai.py
src/gai_play/web/: app.py  game_runner.py
